# 50_google_tock-on-titan

shared-lib/spiutils/: Cargo.toml
tools/: Cargo.toml
userspace/rng/: Makefile
