# Copyright 2020 lowRISC contributors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "spiutils"
version = "0.1.0"
edition = "2018"
authors = [ "Oskar Senft <osk@google.com>" ]
license = "Apache-2.0"
description = """
Utilities for SPI
"""

[dependencies]
byteorder = { path = "../../third_party/byteorder-1.3.4", default_features = false }
static_assertions = { path = "../../third_party/static_assertions-1.1.0" }
ux = { path = "../../third_party/ux-0.1.3", default_features = false }

[features]
default = ["std"]

std = []
